# mq-agical-tutorial-results

./: Cargo.toml  agical-tutorial.wasm  index.html
.github/workflows/: deploy.yml
src/: assets.rs  main.rs  shape.rs
