[package]
name = "agical-tutorial"
version = "0.1.11"
edition = "2021"

[dependencies]
macroquad = "0.4"
macroquad-particles = "0.2.2"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
assets = "assets/"

[package.metadata.android.activity_attributes]
"android:exported" =  "true"