[package]
name = "agical-tutorial"
version = "0.1.13"
edition = "2021"

[dependencies]
macroquad = { version = "0.4", features = ["audio"] }
macroquad-particles = "0.2.2"

[package.metadata.android]
build_targets = ["aarch64-linux-android"]
assets = "assets/"

[package.metadata.android.activity_attributes]
"android:exported" =  "true"

[profile.dev.package.'*']
opt-level = 3